@@ -4,6 +4,7 @@
 - Drop support for rails 3.1
 - Add HTML5 form fields
 - Add :chosen form_ui, and :chosen and :multi_chosen search_ui
+- Fix nested with has_one associations
 
 = 3.2.15 (not released yet)
 - Prepare to unify field overrides and list_ui method signatures
